--- a/Practice 1. New Year 2024/styles/offer.css
+++ b/Practice 1. New Year 2024/styles/offer.css
@@ -5,7 +5,7 @@
 }
 .offer-contents{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .offer-content{
@@ -41,11 +41,15 @@
 .inner-box {
     height: 364.84px;
     width: 364.84px;
-    border: 2px dashed rgb(159, 157, 157);
+    border: 2px dashed rgb(208, 206, 206);
     box-sizing: border-box; 
     background-image: url(../new-year-offer-resources/images/Ellipse\ 1.png);
 }
 .offer-content2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     flex: 1;
 }
 .title-24{
@@ -59,4 +63,6 @@
     font-weight: 400px;
     color: rgba(7, 2, 17, 0.6);
     margin-bottom: 40px;
+    text-align: left;
+    padding-left: 150px;
 }
